--- a/28-07-2023/cal.css
+++ b/28-07-2023/cal.css
@@ -5,13 +5,15 @@
 body{
     height: 100vh;
     width: 100vw;
+    background-color: black;
+    color: white;
 }
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 10px;
+    padding: 1rem;
    
 }
 .row{
@@ -38,5 +40,5 @@ input{
     margin-bottom: 10px;
     text-align: end;
     padding: 10px;
-    
+    border: none;
 }
